k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhorizon
  namespace: rhorizon
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: rhorizon.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port: { number: 80 }
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: front
                port: { number: 80 }
